--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc && tsc-alias",
+    "vercel-build": "tsc",
     "start": "node dist/index.js",
     "seed": "node -r ts-node/register src/seeds/users.ts"
   },
@@ -37,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.12",
+    "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
