--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "franc": "^6.2.0",
+    "iso-639-3": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.15",
+    "languagedetect": "^2.0.0",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.0",
     "multer": "1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "node-ts-cache": "^4.4.0",
+    "node-ts-cache-storage-memory": "^4.4.0",
     "openai": "^4.85.1",
     "tsconfig-paths": "^4.2.0"
   },
